Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-15047

[REG 3.5.1 -> 3.6.0] Events tab not being cleared on first click on "Discard data"

    XMLWordPrintable

Details

    • b961955fdf81de2437e91af2ad4ad51c3dd4f735

    Description

      1. Open a Qt Quick Application project.
      2. Run the project in the QML Profiler.
      3. Stop the project.
        The Analyzer will gather some data.
      4. Go to Events tab.
      5. Click the "Discard data" button.
        The Events list will still contain one line:
        Location	Type	Time in Percent	Total Time	Calls	Mean Time	Median Time	Longest Time	Shortest Time	Details
        <program>		100.00 %	0.001 µs	1	0.001 µs	0.001 µs	0.001 µs	0.001 µs	Main Program
        
      6. Click the "Discard data" button.
        Now the table will be empty.

      The table should be cleared on first click. In Creator 3.5.1, this works correctly.

      Found and tested by Squish test tst_simple_analyze.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            ulherman Ulf Hermann
            rlohning Robert Löhning
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes