QmlProfiler: Don't rebuild events view from empty model

When changing the selected range the main model doesn't change. If the
main model is empty there is nothing to select and we can skip the
selecting.

Task-number: QTCREATORBUG-15047
Change-Id: I997c104ff7f9f541da0eaade7a519cebd39607a4
Reviewed-by: Joerg Bornemann <joerg.bornemann@theqtcompany.com>